--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "autoprefixer": "^10.4.15",
     "axios": "^1.5.0",
     "firebase": "^10.3.0",
+    "formik": "^2.4.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-modal": "^3.16.1",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.15.0",
-    "tailwindcss": "^3.3.3"
+    "react-toastify": "^9.1.3",
+    "tailwindcss": "^3.3.3",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
